--- a/public/app/templates/books.html
+++ b/public/app/templates/books.html
@@ -2,7 +2,9 @@
 
 <div>
     <ul>
-        <li ng-repeat="book in books.allBooks">{{ book.title }} - {{ book.author }} <a href="#/EditBook/{{book.book_id}}">Edit</a>
+        <li ng-repeat="book in books.allBooks">{{ book.title }} - {{ book.author }}
+            <a href="#/EditBook/{{book.book_id}}">Edit</a>
+            <a ng-click="books.deleteBook(book.book_id)" href="">Delete</a>
         </li>
     </ul>
 </div>
