end of module 5 commit.  Added in cacheFactory functionality and created a new service to handle the last book edited feature that was part of the http cookie functionailty.

--- a/public/app/templates/books.html
+++ b/public/app/templates/books.html
@@ -1,6 +1,12 @@
 <h3>All Books</h3>
 
 <div>
+    {{ books.summaryData.bookCount }} Books -
+    {{ books.summaryData.readerCount }} Readers -
+    {{ books.summaryData.grandTotalMinutes }} Total Minutes Read
+</div>
+
+<div>
     <ul>
         <li ng-repeat="book in books.allBooks">{{ book.title }} - {{ book.author }}
             <a href="#/EditBook/{{book.book_id}}">Edit</a>
@@ -10,7 +16,7 @@
 </div>
 
 <a href="#/AddBook">Add New Book</a>
-<a href="#/EditBook/{{ books.lastEdited.book_id}}">Open Last Edited</a>
+<a href="#/EditBook/{{ books.currentUser.lastBookEdited.book_id}}">Open Last Edited</a>
 
 <h3>All Readers</h3>
 
